@@ -1,3 +1,6 @@
+Fri Nov  2 13:21:19 2007 CET
+(DataFilter): new method unpack
+
 Tue Oct 16 15:18:26 2007 CEST
 (Magic): added big kludge for self extracting ZIP archives
 
